Restructured the encryption algorithms and there usage areas
- There is an issue with the user registration decryption