@@ -26,7 +26,7 @@ public class Block {
             byte[] hashBytes = digest.digest(input.getBytes("UTF-8"));
             StringBuilder hexString = new StringBuilder();
             for (byte b : hashBytes) {
-                hexString.append(String.format("%02x", b));
+                hexString.append("%02x".formatted(b));
             }
             return hexString.toString();
         } catch (Exception e) {
